--- a/Commander.NET/Commander.NET/MainWindow.xaml
+++ b/Commander.NET/Commander.NET/MainWindow.xaml
@@ -1,8 +1,32 @@
 ﻿<Window x:Class="Commander.NET.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="Commander.NET" Height="120" Width="600">
+    <Grid Background="#FF16365C">
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="10,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="10,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="50,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="50,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="90,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="90,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="130,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="130,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="170,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="170,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="210,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="210,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="273,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="273,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="313,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="313,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="353,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="353,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="393,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="393,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="433,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="433,47,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="473,19,0,0" VerticalAlignment="Top" Width="35"/>
+        <Rectangle Fill="#FFDEDEDE" HorizontalAlignment="Left" Height="23" Margin="473,47,0,0" VerticalAlignment="Top" Width="35"/>
+
     </Grid>
 </Window>
