--- a/Commander.NET/Commander.NET/VlanSelector.xaml
+++ b/Commander.NET/Commander.NET/VlanSelector.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="Commander.NET.VlanSelector"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="VlanSelector" Height="287" Width="227" WindowStyle="ToolWindow">
+        Title="VlanSelector" Height="300" Width="227" WindowStyle="ToolWindow">
     <Grid>
-        <ListBox Margin="10,126,10,0" Height="100" VerticalAlignment="Top"/>
+        <ListBox x:Name="vlanLB" Margin="10,126,10,0" Height="100" VerticalAlignment="Top" SelectionMode="Multiple"/>
         <TextBox Height="74" Margin="10,26,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,105,0,0" TextWrapping="Wrap" Text="VLAN Assignments" Height="16" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Details" VerticalAlignment="Top"/>
-        <Button Content="Save" HorizontalAlignment="Left" Margin="134,233,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="saveBtn" Content="Save" HorizontalAlignment="Left" Margin="134,243,0,0" VerticalAlignment="Top" Width="75" Click="saveBtn_Click"/>
     </Grid>
 </Window>
