--- a/Commander.NET/Commander.NET/MainWindow.xaml
+++ b/Commander.NET/Commander.NET/MainWindow.xaml
@@ -2,9 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Commander.NET" Height="132" Width="600">
-    <Grid Name="switchGrid"  Background="#FF16365C">
+    <Grid Name="switchGrid" Background="#FF16365C">
         <Grid.ContextMenu>
             <ContextMenu>
+                <MenuItem Name="saveConfig" Header="Save" Click="saveConfig_Click"/>
+                <MenuItem Name="openConfig" Header="Open" Click="openConfig_Click"/>
                 <MenuItem Header="New VLAN"/>
             </ContextMenu>
         </Grid.ContextMenu>
